--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8081
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=inventory
+spring.data.mongodb.uuid-representation=standard
 
 #logging
 logging.level.org.springframework.data=debug
