--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 	</parent>
 	<groupId>com.kfir</groupId>
 	<artifactId>inventory_be</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
+	<packaging>jar</packaging>
 	<name>inventory_be</name>
 	<description>Backend for inventory project</description>
 	<properties>
