--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #server
-server.port=8081
+server.port=8080
 
 #mongodb
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27070
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.port=27017
 spring.data.mongodb.database=inventory
 spring.data.mongodb.uuid-representation=standard
 
