--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 #server
-server.port=8080
+server.port=8082
 
 #mongodb
 
-spring.data.mongodb.host=mongodb
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=inventory
 spring.data.mongodb.uuid-representation=standard
+
+#swagger
+springfox.documentation.swagger-ui.enabled=true
 
 #logging
 logging.level.org.springframework.data=debug
