--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 #server
-server.port=8082
-
+#server.port=8082
+server.port=8081
 #mongodb
 
-spring.data.mongodb.host=localhost
+#spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=inventory
 spring.data.mongodb.uuid-representation=standard
